tests/models/enum/unnamed/i32/fail/max_items.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(max_items = 2)]
        i32
    ),
}
fn main() {}
